<?xml version="1.0" encoding="utf-8"?> 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
android:id="@+id/linearLayout1" 
android:layout_width="fill_parent" 
android:layout_height="fill_parent" 
android:orientation="vertical" >

    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userNameLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/userNameLabel"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="132dp"
        android:text="@string/userNameLabel"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/userEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/editName"
        android:text="@string/userEmailLabel"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/EditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userEmailLabel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/userEmailLabel"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/userButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userEmailLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/userButton" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="200dip"
        android:layout_height="40dip"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/mailingLabel"
        android:textSize="30sp" />

</RelativeLayout>

